--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,3 +11,7 @@ python-dotenv
 Pillow
 django-extensions
 requests
+google-api-python-client 
+google-auth 
+google-auth-httplib2 
+google-auth-oauthlib
